--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,12 @@ android {
     }
 }
 
+
 dependencies {
+    implementation("com.google.android.gms:play-services-maps:19.0.0")
+    implementation libs.play.services.maps
+    implementation libs.retrofit
+    implementation libs.retrofit.converter.gson
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
