--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBSLRbrY-ZNhNAYPQzUag1h6019JM6z3Sc" />
         <activity
             android:name="com.ismin.android.MainActivity"
             android:exported="true">
@@ -19,6 +23,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+    <activity
+        android:name="com.ismin.android.RemarkablePlaceDetailActivity"
+        android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="com.ismin.android.AboutActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+</application>
 
 </manifest>
